--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "assert.h": "c"
     },
     "cmake.sourceDirectory": "${workspaceFolder}/ex1"
 }
