3 first tests pass (:

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,8 +11,11 @@
                 "-Wall", 
                 "-pedantic-errors", 
                 "-Werror", 
-                "-DNDEBUG", 
-                "${fileDirname}/*.c",
+                "-DNDEBUG",
+                "-lm", 
+                "${fileDirname}/matamikya*.c",
+                "${fileDirname}/libmtm.a", 
+                "${fileDirname}/libas.a", 
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
