--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,7 @@
                 "-DNDEBUG",
                 "-lm", 
                 "${fileDirname}/matamikya*.c",
+                "${fileDirname}/biadsy_matamikya*.c",
                 "${fileDirname}/libmtm.a", 
                 "${fileDirname}/libas.a", 
                 "-o",
