--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,20 +3,20 @@
         {
             "type": "cppbuild",
             "label": "C/C++: gcc build active file",
-            "command": "/usr/bin//gcc",
+            "command": "/usr/bin//g++",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "-std=c99",
+                "-std=c++11",
                 "-Wall", 
                 "-pedantic-errors", 
                 "-Werror", 
                 "-DNDEBUG",
                 "-lm", 
-                "${fileDirname}/matamikya*.c",
-                "${fileDirname}/biadsy_matamikya*.c",
-                "${fileDirname}/libmtm.a", 
-                "${fileDirname}/libas.a", 
+                "${fileDirname}/*.cpp",
+               // "${fileDirname}/biadsy_matamikya*.c",
+               // "${fileDirname}/libmtm.a", 
+              //  "${fileDirname}/libas.a", 
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
